<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/totalCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/costoCuenta"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />
    <TextView
        android:id="@+id/commentService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_was_the_service"
        app:layout_constraintTop_toBottomOf="@id/totalCost"
        app:layout_constraintStart_toStartOf="@id/totalCost"
        />

    <RadioGroup
        android:id="@+id/optionsTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/commentService"
        app:layout_constraintStart_toStartOf="parent"
        android:checkedButton="@id/twentyPercent">

        <RadioButton
            android:id="@+id/twentyPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_20"/>

        <RadioButton
            android:id="@+id/eighteenPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_18"
            />
        <RadioButton
            android:id="@+id/fifteenPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okay_15"/>

    </RadioGroup>

    <Switch
        android:id="@+id/roundUpTip"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/round_up_tip"
        app:layout_constraintTop_toBottomOf="@id/optionsTip"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        android:checked="true"/>

    <Button
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/calculate"
        app:layout_constraintTop_toBottomOf="@id/roundUpTip"/>

    <TextView
        android:id="@+id/tipResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="Tip Amount: $10"
        app:layout_constraintTop_toBottomOf="@id/calculate"
        app:layout_constraintStart_toEndOf="@id/calculate"/>






</androidx.constraintlayout.widget.ConstraintLayout>